Додано ініціалізацію бази даних при запуску програми